# meco-rust

./: .gitignore  Cargo.toml  DISTRIBUTION.md  README.md  USAGE.md
.github/workflows/: ci.yml  release.yml
bindings/android/: build.gradle.kts  settings.gradle.kts
bindings/php/: README.md  composer.json  example.php
bindings/php/scripts/: build-lib.sh
bindings/php/src/: Meco.php
bindings/php/test/: smoke.php
bindings/swift/: Meco.podspec  Package.swift
crates/meco-cabi/: Cargo.toml  meco.h
crates/meco-cabi/src/: lib.rs
crates/meco-cabi/test/: meco_smoke.c
crates/meco-core/: Cargo.toml
crates/meco-core/src/: code_mapper.rs  code_type.rs  dispatch.rs  error.rs  lib.rs  router.rs  strings.rs
crates/meco-core/src/letter/: delehi.rs  from_translator.rs  menk.rs  mod.rs  rule.rs  to_translator.rs
crates/meco-core/src/shape/: menk_from.rs  menk_to.rs  mod.rs  rule.rs  translator.rs  z52_from.rs  z52_to.rs
crates/meco-core/src/tables/: mod.rs
crates/meco-core/src/unicode/: mgl.rs  mod.rs  z52.rs  zvvnmod.rs
crates/meco-core/src/word/: char_type.rs  letter_word.rs  mod.rs  nature.rs  shape_word.rs
crates/meco-core/tests/: fuzz.rs  golden.rs
crates/meco-core/tests/golden/: corpus_delehi.txt  golden.tsv
crates/meco-uniffi/: Cargo.toml  README.md
crates/meco-uniffi/src/: lib.rs
crates/meco-uniffi/test/: main.swift
crates/meco-wasm/: Cargo.toml  README.md
crates/meco-wasm/src/: lib.rs
crates/meco-wasm/test/: node_verify.js
crates/meco-wasm/web/: index.html
tools/oracle-java/: OracleHarness.java
tools/table-gen/: TableDumper.java
