[workspace]
resolver = "2"
members = ["crates/meco-core", "crates/meco-cabi", "crates/meco-uniffi", "crates/meco-wasm"]

# Future members (added as the port progresses):
#   "tools/table-gen"   — generator that emits crates/meco-core/src/tables/generated/*.rs
#   "crates/meco-wasm"  — wasm-bindgen binding (web)
#   "crates/meco-uniffi"— UniFFI binding (iOS/Android)
#   "crates/meco-cabi"  — C ABI binding (PHP-FFI / cgo / JNI·Panama)

[workspace.package]
edition = "2021"
license = "Apache-2.0"
