[package]
name = "meco-cabi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "C ABI binding for meco-core (loadable by PHP-FFI, cgo, JNI / Java Panama, ctypes, ...)."

[lib]
name = "meco"
# cdylib -> libmeco.{dylib,so,dll} for runtime loading (PHP FFI, cgo, ...);
# staticlib -> libmeco.a for static linking (e.g. cgo without a shared object).
crate-type = ["cdylib", "staticlib"]

[dependencies]
meco-core = { path = "../meco-core" }
