[package]
name = "meco-uniffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "UniFFI binding for meco-core: idiomatic Swift (iOS) and Kotlin (Android) from one crate."

[lib]
name = "meco_uniffi"
crate-type = ["cdylib", "lib"]

# Self-contained bindings generator: `cargo run -p meco-uniffi --bin uniffi-bindgen -- ...`
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
meco-core = { path = "../meco-core" }
uniffi = { version = "0.31", features = ["cli"] }
thiserror = "2"
