[package]
name = "meco-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "WebAssembly binding for meco-core: an npm package for the browser, Node, Deno/Bun and edge runtimes."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
meco-core = { path = "../meco-core" }
wasm-bindgen = "0.2"
